# Kubernetes-sandbox

./: .dockerignore  .env.local  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/: .dockerignore  Dockerfile  config.py  database.py  init_db.py  main.py
app/core/: __init__.py  security.py
app/crud/: __init__.py  user.py
app/models/: __init__.py  user.py
app/routers/: __init__.py  health.py  monitoring.py  users.py
app/schemas/: __init__.py  user.py
fastapi-chart/: Chart.yaml  values.yaml
fastapi-chart-without-dependencies/: values.yaml
fastapi-chart-without-dependencies/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
fastapi-chart/dashboards/: fastapi-overview.json
fastapi-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  hpa.yaml  ingress.yaml  prometheus-rules.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/: namespace.yaml
k8s/fastapi/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  role.yaml  secret.yaml  service.yaml
k8s/jobs/: backup-pvc.yaml  database-restore-job.yaml  postgres-backup-cronjob.yaml  postgres-backup-job.yaml
k8s/monitoring/: values.yaml
k8s/networkpolicies/: deny-all.yaml  fastapi-egress.yaml  fastapi-ingress.yaml  postgres-allow.yaml
k8s/pgadmin/: configmap.yaml  deployment.yaml  service.yaml
k8s/postgres/: service.yaml
migrations/: env.py
migrations/versions/: c0040373c447_create_users_table.py
