[project]
name = "kubernetes-sandbox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
